--- a/l7dos/l7dos-l1_plus_api.conf
+++ b/l7dos/l7dos-l1_plus_api.conf
@@ -1,26 +1,7 @@
 server {
-    listen 8889;
-    access_log /var/log/nginx/mng_access.log;
-
-    location /api {
-        api write=on;
-        # directives limiting access to the API
-    }
-
-    location = / {
-        rewrite ^(.*)$ https://$host/dashboard.html permanent;
-    }
-
-    location = /dashboard.html {
-        root   /usr/share/nginx/html;
-    }
-
-}
-
-server {
     listen 8888;
-    access_log /var/log/nginx/mng_access.log;
-
+    #access_log /var/log/nginx/mng_access.log;
+    access_log off;
     location /api {
         app_protect_dos_api;
     }
